gccida/g2/dump_bb
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_bb/src/cfgrtl.c:1904:10: error: use of undeclared identifier 'unk_64697D'
fwrite( &unk_64697D, 1uLL, 0x11uLL, outf); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_bb/src/obj/cfgrtl.o] Error 1
